--- a/CyberPunch.vcxproj.filters
+++ b/CyberPunch.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="Header Files\Scenes">
       <UniqueIdentifier>{52ea0af0-a70a-43b6-8bc6-d27b721853c7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\AI">
+      <UniqueIdentifier>{c5a11bdc-4492-49c5-8458-cd0e5e95fd4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\AI">
+      <UniqueIdentifier>{59cb6a69-5bb6-4515-9914-ac959db913b8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Main.cpp">
@@ -66,9 +72,6 @@
     <ClCompile Include="Source\PhysicsSystem.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="Source\MovementSystem.cpp">
-      <Filter>Source Files\Systems</Filter>
-    </ClCompile>
     <ClCompile Include="Source\ResourceManager.cpp">
       <Filter>Source Files\Utilities</Filter>
     </ClCompile>
@@ -87,9 +90,6 @@
     <ClCompile Include="Source\AnimationComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
-    <ClCompile Include="Source\AnimationSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -105,15 +105,24 @@
     <ClCompile Include="Source\PickUp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClInclude Include="Source\AIComponent.cpp">
+    <ClCompile Include="Source\Button.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\AISystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-        <ClInclude Include="Source\Button.cpp">
-      <Filter>Source Files</Filter>
-    </ClInclude>
+    </ClCompile>
+    <ClCompile Include="Header\PlayerPhysicsComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Header\PlayerPhysicsSystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\AIComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\AISystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\AnimationSystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header\Game.h">
@@ -155,12 +164,6 @@
     <ClInclude Include="Header\InputSystem.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
-    <ClInclude Include="Header\CommandPattern.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Header\MovementSystem.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
     <ClInclude Include="Header\SpriteComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
@@ -200,13 +203,34 @@
     <ClInclude Include="Header\PickUp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header\AIComponent.h">
+    <ClInclude Include="Header\Button.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\PlayerPhysicsComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\PlayerPhysicsSystem.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\PlayerInputComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\PlayerInputSystem.h">
+      <Filter>Header Files\Systems</Filter>
     </ClInclude>
     <ClInclude Include="Header\AISystem.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Systems</Filter>
     </ClInclude>
-    <ClInclude Include="Header\Button.h">
+    <ClInclude Include="Header\AIComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\Action.h">
+      <Filter>Header Files\AI</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\BehaviourTree.h">
+      <Filter>Header Files\AI</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\Commands.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
