--- a/CyberPunch.vcxproj.filters
+++ b/CyberPunch.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClCompile Include="Header\AttackSystem.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="Source\OnlineSystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header\Game.h">
@@ -264,6 +267,9 @@
     </ClInclude>
     <ClInclude Include="Header\AttackComponent.h">
       <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Header\OnlineSystem.h">
+      <Filter>Header Files\Systems</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
