turned message sending into ECS, working on receiving

--- a/CyberPunch.vcxproj
+++ b/CyberPunch.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Source\AISystem.cpp" />
     <ClCompile Include="Source\Button.cpp" />
     <ClCompile Include="Source\CollisionListener.cpp" />
-    <ClCompile Include="Source\OnlineInputSystem.cpp" />
+    <ClCompile Include="Source\OnlineInputComponent.cpp" />
     <ClCompile Include="Source\OnlineSendComponent.cpp" />
     <ClCompile Include="Source\OnlineSystem.cpp" />
     <ClCompile Include="Source\PickUp.cpp" />
@@ -177,7 +177,7 @@
     <ClInclude Include="Header\GameScene.h" />
     <ClInclude Include="Header\MainMenuScene.h" />
     <ClInclude Include="Header\MenuManager.h" />
-    <ClInclude Include="Header\OnlineInputSystem.h" />
+    <ClInclude Include="Header\OnlineInputComponent.h" />
     <ClInclude Include="Header\OnlineSendComponent.h" />
     <ClInclude Include="Header\OptionsScene.h" />
     <ClInclude Include="Header\PickUp.h" />
